<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <!-- CEP e Botão de Busca -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/verde_4caf58"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/verde_4caf58">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCEP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cep"
                    android:inputType="number"
                    android:textColor="@color/verde_4caf58"
                    android:maxLength="8"
                    android:textCursorDrawable="@drawable/cursor_edittext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btBuscarCEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde_4caf58"
                android:padding="15dp"
                android:text="@string/button_text_buscar_cep"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <!--+++++++++++++++++++++++++-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_resultados"
            android:textColor="@color/verde_4caf58"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="50dp"/>

        <!-- Logradouro -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/verde_4caf58"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/verde_4caf58"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLogradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_logradouro"
                android:inputType="none"
                android:textColor="@color/verde_4caf58"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_edittext"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--+++++++++++++++++++++++++-->

        <!-- Bairro -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/verde_4caf58"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/verde_4caf58"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bairro"
                android:inputType="none"
                android:textColor="@color/verde_4caf58"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_edittext"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--+++++++++++++++++++++++++-->

        <!-- Cidade -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/verde_4caf58"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/verde_4caf58"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cidade"
                android:inputType="none"
                android:textColor="@color/verde_4caf58"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_edittext"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--+++++++++++++++++++++++++-->

        <!-- Estado -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/verde_4caf58"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/verde_4caf58"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:inputType="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_estado"
                android:textColor="@color/verde_4caf58"
                android:maxLength="2"
                android:textCursorDrawable="@drawable/cursor_edittext"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--+++++++++++++++++++++++++-->

        <Button
            android:id="@+id/btLimparCampos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_limpar_campos"
            android:backgroundTint="@color/azul_3d5ff5"
            android:padding="15dp"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

</ScrollView>
